src/components/Nav/Nav.css
/* Header Styles */
#navheader {
  background-color: transparent;
}

.fixed-top {
  position: fixed;
  top: 0;
  right: 0;
  left: 1px;
  /* z-index: 1030; */
}

.navcontainer {
  height: 60px;
  
  align-items: center;
  padding-right: 20px;
  padding-left: 20px;
  margin-right: auto;
  margin-left: 4%;
  margin-bottom: 30px;
  display: flex;
  align-items: center;
}

.logo-container {
  background-color: #f8f9fa;
  height: 50px; 
  width: 200px; 
}




#navbar ul {
  display: flex;
  justify-content: space-between;
  width: auto;
  margin-left: 50px;
  list-style: none;
  align-items: center;
  font-size: 20px;
  font-family: "Montserrat", sans-serif;
  font-weight: 900;
  font-style: bold;
}

.nav-link {
  
  padding: 10px 15px;
  text-decoration: none;
}

.social-links {
  margin-left: 70px;
  align-items: end;
  justify-content: end;
  margin-bottom: 8px;
}

.social-links a {
  width: 20px;
  font-size: 30rem;
  margin-left: 2px;
}

.social-links a {
  color: #fff;
  margin-left: 15px;
  font-size: 24px;
}

.dropdown-toggle::after {
  content: '\25BC';
  display: inline-block;
  margin-left: 0px;
}

.dropdown-menu {
  display: none;
  flex-direction: column;
  position: absolute;
  z-index: 1000;
  background-color: #fff;
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
  padding: 10px 60px 10px 0;
}

.dropdown-menu li {
  display: block;
}

.dropdown-menu li a {
  padding: 10px 20px;
  font-size: 15px;
  color: #212529;
  text-decoration: none;
  display: block;
  border-bottom: 1px solid #f0f0f0;
}

.dropdown-menu li:last-child a {
  border-bottom: none;
}

.dropdown-menu li a:hover,
.dropdown-menu li a:active {
  color: #007bff;
  background-color: #f8f9fa;
}

.dropdown-menu-hidden {
  display: none;
}

.dropdown:hover .dropdown-menu-hidden {
  display: block;
}

.nav-link a {
  color: black;
}

.black-bg {
  background-color: #f8f9fa !important;
  height: 70px;
}

.NavHamToggel {
  display: none;
}

/* Responsive Styles */
@media (max-width: 1024px) {
  #navheader {
      width: 100%;
  }

  .navcontainer {
      margin-left: 0;
      width: 100%;
      justify-content: center;
      align-items: center;
      padding-right: 10px;
      padding-left: 10px;
      font-size: 0.8rem;
  }

  .nav-link {
      padding: 5px 10px;
  }

  .social-links a {
      font-size: 1.5rem;
  }
}

@media (max-width: 750px) {
  .navcontainer {
      width: 100%;
      align-items: center;
      justify-content: center;
  }

  .NavHamToggel {
      display: block;
      margin-left: 20px;
  }

  .nav-hide {
      display: none;
  }

  .dropdown-nav ul {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      position: fixed;
      top: 60px;
      left: 0;
      right: 0;
      background-color: #E0EDF8;
      border: 1px solid #ddd;
      box-shadow: 3px 3px 6px rgba(0, 0, 0, .2);
      z-index: 99;
      width: 100%;
  }

  .logo-container img {
      height: 160px;
  }

  .social-links {
      margin-left: 7rem;
      justify-content: end;
  }
}

@media (min-width: 1366px) {
  .navcontainer {
      width: 100%;
  }
}

.cta-link {
  transition: transform 0.3s;
}

.single-cta i {
  color: #080e68;
  font-size: 30px;
  float: left;
  align-items: center;
  margin-bottom: 13px;
}

